--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@google/model-viewer": "^4.0.0",
+    "@types/styled-components": "^5.1.34",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "styled-components": "^6.1.14",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
